packages/documentation/docs/.vitepress/theme/style.css
/* Styles adjusting VitePress according to theme */
:root {
    --vp-background: 0, 0%, 100%;
    --vp-c-text-1: hsla(var(--a-base-color), var(--a-text-emphasis-medium-opacity));
    --vp-c-bg: hsl(var(--vp-background));
    --vp-c-bg-alt: hsl(var(--vp-background));

    /* Branding */
    --vp-brand-hue: 265;
    --vp-c-brand-lighter: hsl(var(--vp-brand-hue), 97%, 75%);
    --vp-c-brand-light: hsl(var(--vp-brand-hue), 97%, 70%);
    --vp-c-brand: hsl(var(--vp-brand-hue), 97%, 66%);
    --vp-c-brand-dark: hsl(var(--vp-brand-hue), 97%, 60%);
    --vp-c-brand-darker: hsl(var(--vp-brand-hue), 97%, 55%);
}

:root.dark {
    /* Branding */
    --vp-brand-hue: 261;
    --vp-c-brand-lighter: hsl(var(--vp-brand-hue), 73%, 75%);
    --vp-c-brand-light: hsl(var(--vp-brand-hue), 73%, 70%);
    --vp-c-brand: hsl(var(--vp-brand-hue), 73%, 66%);
    --vp-c-brand-dark: hsl(var(--vp-brand-hue), 73%, 60%);
    --vp-c-brand-darker: hsl(var(--vp-brand-hue), 73%, 55%);
}

/* ==========================
SECTION VitePress
========================== */

#VPSidebarNav .group+.group {
    border-top: none !important;
}

.VPNavBarTitle {
    border-bottom: none !important;
}

@media (min-width: 960px) {
    .VPNavBar>.container {
        border-bottom: thin solid hsla(var(--a-base-color), var(--a-border-opacity));
    }
}

.no-sidebar .VPNavBar .container {
    border-bottom-color: transparent;
}

@media (min-width: 960px) {
    .VPNavBar .content {
        /* background: hsla(250, 10%, 6%, .7) !important; */
        background: hsla(var(--vp-background), 0.7) !important;
    }
}

.dark .VPNav.no-sidebar {
    background-color: transparent !important;
}

/* ==========================
👉 Algolia search
========================== */

.VPNavBarSearch.search {
    flex-grow: unset;
    margin-inline-end: 2rem;
}

@media (min-width: 768px) {
    .VPNavBarSearch .DocSearch.DocSearch-Button {
        background-color: hsla(var(--a-base-color), 0.04) !important;
    }
}

/* ==========================
👉 Sidebar scrollbar style
========================== */

.VPSidebar::-webkit-scrollbar {
    display: none;
    scrollbar-width: none;
}

/*
    Enable below style for styled scrollbar
*/
/* .VPSidebar::-webkit-scrollbar {
    background: rgb(var(--a-layer));
    block-size: 8px;
    border-end-end-radius: 14px;
    border-start-end-radius: 14px;
    inline-size: 8px;
} */

/* Track */
/* .VPSidebar::-webkit-scrollbar-track {
    background: transparent;
} */

/* Handle */
/* .VPSidebar::-webkit-scrollbar-thumb {
    background: hsl(0, 0%, 10%);
    border-radius: 0.5rem;
} */

/* .VPSidebar::-webkit-scrollbar-corner {
    display: none;
} */


/* ==========================
👉 Dark
========================== */

:root.dark {
    --vp-c-bg-alt: hsl(var(--a-base-hue), 0%, 6%);
    --vp-code-line-highlight-color: hsl(0, 0%, 12%);
    --vp-background: 0, 0%, 6%;
}

/* code blocks */
.vp-doc div[class*='language-']:not(:where(.vp-raw *)) {
    border: 1px solid transparent;
}

.dark .vp-doc div[class*='language-']:not(:where(.vp-raw *)) {
    border: 1px solid hsla(var(--a-base-color), var(--a-border-opacity));
    opacity: 0.85;
    font-weight: 500;
}

/* ==========================
👉 Demo
========================== */

.cards-demo-container {
    /* rounded-lg border-dashed border border-a-border p-8 bg-[hsla(var(--a-base-color), .05)] */
    @apply rounded-lg border-dashed border border-a-border p-8;
    background: hsla(var(--a-base-color), 0.05);
}

.dark .cards-demo-container {
    background: hsla(var(--a-base-color), 0.01);
}

/* ==========================
👉 Code snippet styles
========================== */

.vp-doc div[class*='language-']:not(:where(.vp-raw *)) {
    border-radius: 8px !important;
    margin-right: 0 !important;
    margin-left: 0 !important;
}

/* !SECTION */

/* SECTION Home */
.VPHome {
    padding-bottom: 0 !important;
}

.VPHero.VPHomeHero .text {
    color: hsla(var(--a-base-color), 0.87)
}

/* !SECTION */

